# steam_shortcut

./: .gitignore  Cargo.toml  README.md
.github/workflows/: new-release.yaml
src/: main.rs
src/actions/: flatpak.rs  minus_games.rs  mod.rs  print_shortcuts.rs
src/config/: mod.rs
src/desktop_file/: mod.rs
src/flatpak/: flatpak_creation_error.rs  mod.rs
src/pc_gaming_wiki/: mod.rs  pc_gaming_wiki.rs  pc_gaming_wiki_search_result.rs  pc_gaming_wiki_wiki_result.rs
src/shortcuts/: mod.rs  parsing_error.rs  shortcut.rs
src/steam/: app_list_result.rs  login_users.rs  mod.rs
src/steamstatic/: mod.rs
src/utils/: mod.rs
