[package]
name = "steam_shortcut"
version = "0.1.0"
edition = "2021"

[dependencies]
crc = "3"
ureq = { version = "2", features = ["json", "brotli", "gzip", "rustls"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
urlencoding = { version = "2" }
dirs = "5"
resvg = "0"
image = { version = "0", features = ["jpeg", "png", "default-formats"] }
clap = { version = "4", features = ["derive", "env", "help"] }
strum = { version = "0", features = ["derive", "strum_macros"] }
dotenvy = "0"
textdistance = "1"
anyhow = { version = "1" }